--- a/packages/ngcui-4.0.0-module/package.json
+++ b/packages/ngcui-4.0.0-module/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@angular/compiler": "^4.0.0",
     "@angular/compiler-cli": "^4.0.0",
+    "@types/express": "^4.0.0",
     "rimraf": "^2.0.0",
     "rxjs": "^5.0.0",
     "typescript": "^2.0.0",
