feat(ngcui-5.0.0): tell Angular Compiler to interpret annotations as decorators

--- a/packages/ngcui-5.0.0-module/tsconfig-aot.json
+++ b/packages/ngcui-5.0.0-module/tsconfig-aot.json
@@ -6,6 +6,7 @@
   "angularCompilerOptions": {
     "genDir": "dist",
     "skipMetadataEmit": false,
-    "strictMetadataEmit": true
+    "strictMetadataEmit": true,
+    "annotationsAs": "decorators"
   }
 }
